--- a/hinnasto.html
+++ b/hinnasto.html
@@ -25,7 +25,7 @@
         
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark justify-content-center">
    <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
-  <a class="navbar-brand" href="index.html"><img class="img-fluid" src="logo.png"></a>
+  <a class="navbar-brand" href="index.html"><img class="img-fluid" src="logo.png" alt="logo"></a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -80,7 +80,7 @@
 </tr>
 
 </table> </div>
-<div class="col-md-6"><img class="img-fluid" src="palvelut.jpg" width="80%"></div></div>
+<div class="col-md-6"><img class="img-fluid" src="nautiskelua.jpg" alt="Palvelut"></div></div>
 <h2> Muut palvelut</h2>
 <table>
 <tr> 
@@ -107,15 +107,13 @@
 <td>125 €</td>
 </tr>
 </table></div>
-</div>
-</body>
-
 <footer> 
   Monnin Mökit Oy<br>
   monninmokit@hotmail.com
   </footer>
+</body>
+
+
  
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  
 </html>
