--- a/mokit.html
+++ b/mokit.html
@@ -25,7 +25,7 @@
         
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
    <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
-  <a class="navbar-brand" href="index.html"><img class="img-fluid" src="logo.png"></a>
+  <a class="navbar-brand" href="index.html"><img class="img-fluid" src="logo.png" alt="logo"></a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -65,9 +65,9 @@
 <b>Hinta:</b> 150€ vkl. Tarkempi hinnasto <a href="hinnasto.html">täällä</a>.
 
 
-</div> <div class="col-md-6 loota"> <img class="img-fluid" src="onnela_esittely.jpg"></div>
+</div> <div class="col-md-6 loota"> <img class="img-fluid" src="onnela_esittely.jpg" alt="Onnela"></div>
 
-<p>
+
 
 <div class="col-md-6 loota"><h2 class="mokki"><a href="#">KORPIHOVI</a></h2>
 <br> <b>Pinta-ala:</b> 146m2 <br>
@@ -75,17 +75,15 @@
 <b>Sauna:</b> Puusauna rannassa sekä sähkösauna<br>
 <b>Muuta:</b> Valmistuu kesäksi 2020! Kysele lisätietoja!
 
-</div> <div class="col-md-6 loota"> <img class="img-fluid" src="kuvatulossa.jpg"></div></p>
+</div> <div class="col-md-6 loota"> <img class="img-fluid" src="kuvatulossa.jpg" alt="Korpihovin kuva tulossa"></div>
 </div>
 </div>
-</body>
 
 <footer> 
   Monnin Mökit Oy<br>
   monninmokit@hotmail.com
-  </footer>
- 
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+</footer>
+</body>
+
+
 </html>
