--- a/meistä.html
+++ b/meistä.html
@@ -25,7 +25,7 @@
         
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
    <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
-  <a class="navbar-brand" href="index.html"><img class="img-fluid" src="logo.png"></a>
+  <a class="navbar-brand" href="index.html"><img class="img-fluid" src="logo.png" alt="logo"></a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
     <span class="navbar-toggler-icon"></span>
   </button>
