--- a/palvelut.html
+++ b/palvelut.html
@@ -25,7 +25,7 @@
         
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
    <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
-  <a class="navbar-brand" href="index.html"><img class="img-fluid" src="logo.png"></a>
+  <a class="navbar-brand" href="index.html"><img class="img-fluid" src="logo.png" alt="logo"></a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -73,7 +73,5 @@ Meillä on mökkien ja huviloiden lisäksi muutakin vuokrattavaa kesärientoihin
   palaute@monninmokit.fi
   </footer>
  
- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> </body>
+</body>
 </html>
