--- a/yhteystiedot.html
+++ b/yhteystiedot.html
@@ -25,7 +25,7 @@
         
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
    <div class="mx-auto d-sm-flex d-block flex-sm-nowrap">
-  <a class="navbar-brand" href="index.html"><img class="img-fluid" src="logo.png"></a>
+  <a class="navbar-brand" href="index.html"><img class="img-fluid" src="logo.png" alt="logo"></a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -62,17 +62,20 @@
 <div class="row"> <div class="col-md-12">
 <div class="container-fluid">
     <div class="map-responsive">
-   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17944.885285962555!2d26.12632037262232!3d61.16790698333884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4690293668f5db1d%3A0x8ffe284385697778!2sKonnivesi!5e0!3m2!1sfi!2sfi!4v1587653543771!5m2!1sfi!2sfi" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17944.885285962555!2d26.12632037262232!3d61.16790698333884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4690293668f5db1d%3A0x8ffe284385697778!2sKonnivesi!5e0!3m2!1sfi!2sfi!4v1587653543771!5m2!1sfi!2sfi" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 </div></div></div>
 <div class="row">
-
 <div class="col-md-12">
-<h2>Ajo-ohjeet</h2>
-<center>Suspendisse interdum purus id luctus finibus. Cras non odio sed leo gravida eleifend. Integer hendrerit faucibus nibh in pretium. Nullam lacus lorem, tincidunt in imperdiet vitae, venenatis vitae eros. Sed in luctus urna, ac tempus mi. Nam aliquet placerat sem, ut scelerisque neque pharetra at. Quisque dignissim a eros quis auctor. Praesent sodales urna at finibus egestas. Maecenas viverra mauris magna, ut bibendum augue porta in. </center>
-<h2>Ota yhteyttä</h2>
-Jos haluat lisätietoa mökeistä, soita numeroon <b>040 1234567</b> tai jätä palautetta alla olevalla lomakkeella. Myös sähköpostitse saat meidät kiinni: <b>palaute@monninmokit.fi</b>. 
-  <form>
+
+<h2>Ajo-ohjeet</h2></div>
+<div class="col-md-12">
+Suspendisse interdum purus id luctus finibus. Cras non odio sed leo gravida eleifend. Integer hendrerit faucibus nibh in pretium. Nullam lacus lorem, tincidunt in imperdiet vitae, venenatis vitae eros. Sed in luctus urna, ac tempus mi. Nam aliquet placerat sem, ut scelerisque neque pharetra at. Quisque dignissim a eros quis auctor. Praesent sodales urna at finibus egestas. Maecenas viverra mauris magna, ut bibendum augue porta in. </div>
+<div class="col-md-12">
+<h2>Ota yhteyttä</h2></div>
+<div class="col-md-12">
+Jos haluat lisätietoa mökeistä, soita numeroon <b>040 1234567</b> tai jätä palautetta alla olevalla lomakkeella. Myös sähköpostitse saat meidät kiinni: <b>palaute@monninmokit.fi</b>. </div>
+ <div class="col-md-12"> <form>
   <fieldset>
   <legend>Tiedustelulomake:</legend>
   <label for="fname">Etunimi:</label><br>
@@ -81,7 +84,7 @@ Jos haluat lisätietoa mökeistä, soita numeroon <b>040 1234567</b> tai jätä 
   <label for="lname">Sukunimi:</label><br>
   <input type="text" id="lname" name="lname" required><br>
   
-  <label for="email" id="email" name="email">E-mail:</label>
+  <label id="email">E-mail:</label>
   <input type="email" id="maili" name="email" required> <br>
   <input type="radio" id="haluan" name="valinta" value="haluan">
   <label for="haluan">Haluan lisätietoa</label><br>
@@ -96,21 +99,20 @@ Jos haluat lisätietoa mökeistä, soita numeroon <b>040 1234567</b> tai jätä 
 </select> 
 <br>
  
-   <label for="palaute">Palaute:</label>
+   <label for="tiedustelu">Palaute / Tiedustelu:</label>
 
-<textarea id="palaute" rows="4" cols="80" maxlength="80">
-Kerro, mitä mieltä olet palveluistamme</textarea> <br>
+<textarea id="tiedustelu" rows="4" cols="80" maxlength="80">
+Kerro palautteesi tai tiedustele palveluistamme</textarea> <br>
   
   <input type="submit" value="Lähetä">
   </fieldset>
-  </form>
+  </form></div>
 
 
 </div></div>
  <br>
 
 
-</div>
    <footer> 
   Monnin Mökit Oy<br>
   palaute@monninmokit.fi
