--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fi">
   <head>
       <title>Monnin Mökit</title>
@@ -67,7 +67,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="karuselli1.jpg" alt="Uimista">
-      <div class="carousel-caption">
+      <div class="carousel-caption d-none d-md-block">
     <h3>Vuokraa mökki Heinolasta</h3>
     <p>Konniveden rannalta</p>
   </div>
