--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
   </div>
   </div>
   <div class="container"><div class="row">
-  <div class="col-sm-4">
+  <div class="col-md-4">
   <div class="box">
   <i class="fas fa-home fa-3x"></i>
   <h3>Mökin vuokraus</h3>
  Vuokraa mökki Konniveden rannalta!
   
   </div></div>
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <div class="box">
       <i class="fas fa-sun fa-3x"></i>
 
@@ -122,7 +122,7 @@
  Meiltä parhaat palvelut kesän viettoon - aina suppilautavuokrasta mökkiviikonloppuihin!
   </div>  
   </div>
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <div class="box">
       <i class="fas fa-cloud fa-3x"></i>
 
