--- a/index.html
+++ b/index.html
@@ -97,24 +97,24 @@
   </a> </div>
  
   <div class="row news">
-  <div class="col-md-6"> 
+  <div class="col-sm-6"> 
   <h3> Tervetuloa Monnin Mökit - vuokrauspalveluun!</h3>
   Kun etsit rauhaa arjen keskellä tai kaipaat aitoa Suomen mökkikesää kirkasvetisen järven rannalla, voimme olla sopiva vaihtoehto täyttämään kesänviettotarpeesi. Meiltä voit myös vuokrata suppilautaa, paljua ja paljon muuta. 
-  </div>  <div class="col-md-6">
+  </div>  <div class="col-sm-6">
   <h3>Ajankohtaista</h3>
   27.05.2020 - Uusi kesäkausi alkamassa! Tiedustele vapaita kalenteripäiviä vuokrauksille!
   
   </div>
   </div>
   <div class="container"><div class="row">
-  <div class="col-md-4">
+  <div class="col-sm-4">
   <div class="box">
   <i class="fas fa-home fa-3x"></i>
   <h3>Mökin vuokraus</h3>
  Vuokraa mökki Konniveden rannalta!
   
   </div></div>
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <div class="box">
       <i class="fas fa-sun fa-3x"></i>
 
@@ -122,7 +122,7 @@
  Meiltä parhaat palvelut kesän viettoon - aina suppilautavuokrasta mökkiviikonloppuihin!
   </div>  
   </div>
-    <div class="col-md-4">
+    <div class="col-sm-4">
       <div class="box">
       <i class="fas fa-cloud fa-3x"></i>
 
