--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
     </div>
     <div class="carousel-item">
       <img src="karuselli3.jpg" alt="Suppailua">
-      <div class="carousel-caption">
+      <div class="carousel-caption d-none d-md-block">
     <h3>Suppailua</h3>
     <p>Nappaa suppilauta mukaan</p>
   </div>
     </div>
     <div class="carousel-item">
       <img src="karuselli2.jpg" alt="Nautiskelua">
-      <div class="carousel-caption">
+      <div class="carousel-caption d-none d-md-block">
     <h3>Nautiskele</h3>
     <p>Joogaa, meditoi - nauti kesästä Konniveden rannalla</p>
   </div>
@@ -95,7 +95,7 @@
   <a class="carousel-control-next" href="#demo" data-slide="next">
     <span class="carousel-control-next-icon"></span>
   </a> </div>
- 
+ <div class="container">
   <div class="row news">
   <div class="col-sm-6"> 
   <h3> Tervetuloa Monnin Mökit - vuokrauspalveluun!</h3>
@@ -132,7 +132,7 @@
   Monnin Mökit Oy<br>
   monninmokit@hotmail.com
   </footer>
- 
+    </div>
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script></body>
