--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <span class="carousel-control-next-icon"></span>
   </a> </div>
 
-  <div class="row news container">
+  <div class="row news">
   <div class="col-sm-6"> 
   <h3> Tervetuloa Monnin Mökit - vuokrauspalveluun!</h3>
   Kun etsit rauhaa arjen keskellä tai kaipaat aitoa Suomen mökkikesää kirkasvetisen järven rannalla, voimme olla sopiva vaihtoehto täyttämään kesänviettotarpeesi. Meiltä voit myös vuokrata suppilautaa, paljua ja paljon muuta. 
